objects/LLC_BI__Tenancy__c.object
<CustomObject>
    <description>This object represents the contract between the collateral owner and the tenant.</description>
    <fields>
        <fullName>LLC_BI__Area_Measurement__c</fullName>
        <description>Users populate this optional picklist field to indicate the unit of measurement used for the size of the area.</description>
        <label>Area Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sq Feet</fullName>
                </value>
                <value>
                    <fullName>Sq Meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Break_Date__c</fullName>
        <description>Users populate this optional date field to set the break date of the lease. The timing of the break date can depend on the length of the term of the lease.</description>
        <label>Break Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users populate this required field to reference the collateral that is associated with the tenancy. The system automatically populates the field if the user created the tenancy from a collateral record.</description>
        <inlineHelpText>This field displays the relationship between the collateral and the tenancy.</inlineHelpText>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Tenancies</relationshipLabel>
        <relationshipName>Collateral_Tenancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Frequency__c</fullName>
        <description>Users populate this optional picklist field to indicate whether the cost per area is captured on a monthly or annual basis.</description>
        <label>Cost Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Per_Area__c</fullName>
        <description>Users populate this optional currency field to indicate the cost per area unit.</description>
        <label>Cost Per Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Floor_Area__c</fullName>
        <description>Users populate this optional number field to indicate the total square measurement of floor space in square units.</description>
        <inlineHelpText>This field defines the total square measurement of floor space in square units.</inlineHelpText>
        <label>Floor Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Income_Frequency__c</fullName>
        <description>Users populate this optional picklist field to indicate the rate of income from the tenancies.</description>
        <label>Income Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Income__c</fullName>
        <description>Users populate this optional currency field to indicate the amount of income the owner earns from tenancies.</description>
        <inlineHelpText>This field defines the amount of income the owner earns from tenancies.</inlineHelpText>
        <label>Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_End_Date__c</fullName>
        <description>Users populate this required date field to set the date on which a lease agreement expires or terminates.</description>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Start_Date__c</fullName>
        <description>Users populate this required date field to set the date on which a lease agreement begins.</description>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Type__c</fullName>
        <description>Users populate this optional picklist field to indicate the type of lease agreement for a specific property or asset.</description>
        <label>Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Triple Net Lease</fullName>
                </value>
                <value>
                    <fullName>Full Service Lease</fullName>
                </value>
                <value>
                    <fullName>Modified Gross Lease</fullName>
                </value>
                <value>
                    <fullName>Absolute Net Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Rent__c</fullName>
        <description>Users populate this optional currency field to capture the cost of rent the tenant pays as rent every month. It is used in conjunction with the Lease Start and End Date fields to calculate the total rent for the lease period.</description>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tenant_Type__c</fullName>
        <description>Users populate this required picklist field to indicate the type of tenant that is renting a specific property or asset.</description>
        <label>Tenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users populate this optional lookup field to reference the relationship that is associated with the tenancy. The system automatically populates the field if the user created the tenancy from a relationship record.</description>
        <inlineHelpText>This field displays the relationship between the tenant and the tenancy.</inlineHelpText>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tenancies</relationshipLabel>
        <relationshipName>Collateral_Tenancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unit__c</fullName>
        <description>Users populate this optional text field to indicate the specific unit of a rental property that a tenant will be occupying.</description>
        <inlineHelpText>This field defines the unit of a rental property that a tenant will be occupying.</inlineHelpText>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tenancy</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Tenancy</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>